<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Tracking</string>

    <string name="mode_barcode_live_title">Barcode Scanning</string>
  <string name="mode_barcode_live_subtitle">Scan the QR code of a truck to initialize</string>
  <string name="settings_title">Truck Tracking Settings</string>
  <string name="cd_settings_button">Settings</string>
  <string name="cd_close_button">Back</string>
  <string name="cd_flash_button">Toggle camera flash</string>
  <string name="cd_photo_library_button">Upload image</string>
  <string name="prompt_point_at_an_object">Point your camera at an object</string>
  <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
  <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
  <string name="prompt_move_camera_closer">Move closer to search</string>
  <string name="prompt_searching">Searching&#8230;</string>
  <string name="product_search_button">Search object</string>
  <plurals name="bottom_sheet_title">
    <item quantity="one">%d match found</item>
    <item quantity="other">%d matches found</item>
  </plurals>
  <string name="static_image_prompt_detected_no_results">No results found</string>
  <string name="static_image_prompt_detected_results">Tap on a dot to inspect</string>
  <string name="static_image_card_no_result_title">No result found</string>
  <string name="static_image_card_no_result_subtitle">Support text place holder</string>
  <string name="static_image_preview_card_subtitle">+%d more results</string>

  <!-- Strings for camera settings. -->
  <string name="pref_category_camera">Camera</string>
  <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
  <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
  <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>

  <!-- Strings for object detection settings. -->
  <string name="pref_category_object_detection">Object detection</string>
  <string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
  <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
  <string name="pref_key_object_detector_enable_classification" translatable="false">odec</string>
  <string name="pref_title_object_detector_enable_classification">Enable classification</string>

  <!-- Strings for product search settings. -->
  <string name="pref_category_product_search">Product search</string>
  <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
  <string name="pref_title_enable_auto_search">Enable auto search</string>
  <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
  <string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual search</string>
  <string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
  <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
  <string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto search</string>
  <string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>

  <!-- Strings for barcode detection settings. -->
  <string name="pref_category_barcode_detection">Barcode detection</string>
  <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
  <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
  <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
  <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
  <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
  <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
  <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
  <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
  <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
  <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
  <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
  <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
  <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
  <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
  <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>

  <string name="truck_registration">Truck Registration</string>
  <string name="truck_registration_subtitle">Click here to register truck</string>

  <string name="truck_in">Truck Loading</string>
  <string name="truck_in_subtitle">Truck loading subtitle</string>

  <string name="truck_exit">Truck Unloading</string>
  <string name="truck_exit_subtitle">Truck unloading subtitle</string>
  <string name="shr_error_password">Password must contain at least 8 characters.</string>
  <string name="shr_hint_username">Username</string>
  <string name="shr_hint_password">Password</string>
  <string name="shr_button_next">Next</string>
  <string name="shr_button_cancel">Cancel</string>
    <string name="truck_loading">Loading</string>
  <string name="truck_unloading">Unloading</string>
    <string name="truck_no_hint">Truck Number</string>
  <string name="truck_driver_name_hint">Truck Driver Name</string>
    <string name="truck_register_text">Register</string>
    <string name="truck_loading_btn_text">Submit</string>
  <string name="truck_date_hint">Date Time</string>
  <string name="truck_laden_weight_hint">Laden Weight</string>
  <string name="truck_empty_weight_hint">Empty Weight</string>
  <string name="weight_suffix">kg</string>
</resources>
