<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/barcode_bottom_sheet_padding_vertical"
    android:paddingBottom="@dimen/barcode_bottom_sheet_padding_vertical"
    android:background="@color/white"
    android:orientation="vertical">

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/barcode_field_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical"/>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/truck_unloading_btn"
        style="@style/Widget.Shrine.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/truck_unloading" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/truck_loading_btn"
        style="@style/Widget.Shrine.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@id/truck_unloading_btn"
        android:layout_toLeftOf="@id/truck_unloading_btn"
        android:text="@string/truck_loading" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@id/truck_loading_btn"
        android:layout_toLeftOf="@id/truck_loading_btn"
        android:text="@string/shr_button_cancel" />

  </RelativeLayout>

</LinearLayout>
